<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CR</string>
    <string name="action_settings_str">Settings</string>
    <string name="settings_title_tip">Settings</string>
    <!-- action for debug start -->
    <string name="action_client_str">Client</string>
    <string name="action_server_str">Server</string>
    <string name="action_nfc_str">NFC</string>
    <string name="action_analysis_str">Upload</string>
    <!-- action for debug end -->
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="nfc">NFC</string>
    <string name="btn_blth_connect">Connect</string>
    <string name="btn_blth_visiblity">Bluetooth visibility setting</string>
    <string name="btn_blth_disconnect">Disconnect</string>
    <string name="connect_state_init">Disconnected</string>
    <string name="detected_userid_init">Scan your IDCard</string>
    <string name="tv_user_detect_tip">XXX</string>
    <string name="progress_scaning">Scaning</string>
    <string name="progress_connecting">Connecting</string>
    <string name="send">Send</string>
    <string name="write_tip">Input something</string>
    <string name="bluetooth_unopened">Bluetooth is unopened, please open the Bluetooth first</string>
    <string name="denied_required_permission">Permissions denied. You can change them in Settings &gt; Apps.</string>
    <string name="bt_connected_xn">BT connected</string>
    <string name="bt_disconnected_xn">BT disconnected</string>
    <string name="connected_success_tip">Connected devices：</string>
    <string name="bt_unsupported">Unsupported BT?</string>
    <string name="connected_failed_tip">Connect fail</string>
    <string name="disconnected_device_tip">Disconnected</string>
    <string name="bt_data_received_success">Data received success:</string>
    <string name="bt_data_send_success">Data sent success:</string>
    <string name="developer_title_tip">Debug</string>
    <string name="et_bt_connected_name">Please input bt Name</string>
    <string name="et_bt_connected_address">Please input bt address</string>
    <string name="bt_data_received_show">Received Data:</string>
    <string name="xn_weighed_str">Weight</string>
    <string name="xn_report_str">Report</string>
    <string name="btn_upload_weight_str">Upload</string>
    <string name="tv_weight_count_tip"> kg</string>
    <string name="tv_weight_init_tip">--</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_nfc">Setting</string>
    <string name="btn_exit">Exit</string>
    <string name="tip_nfc_notfound">no nfc hardware!</string>
    <string name="tip_nfc_disabled">nfc disabled</string>
    <string name="tip_nfc_enabled">nfc enabled</string>
    <string name="msg_reading">Reading Card...</string>
    <string name="msg_nonfc">No NFC hardware found, Program will NOT work.</string>
    <string name="msg_nfcdisabled">NFC hardware has been disabled, Please enable it first. (using the \'Setting\' button to turn it on or off)</string>
    <string name="msg_nocard">No Card been read, Please take the card near to the back cover of phone and try again</string>
    <string name="msg_copied">Card information has been copied to clipboard</string>
    <string name="lab_id">ID:</string>
    <string name="lab_pmm">PMm:</string>
    <string name="lab_serl">SEL:</string>
    <string name="lab_ver">VER:</string>
    <string name="lab_date">DAT:</string>
    <string name="lab_op">USE:</string>
    <string name="lab_log">Log:</string>
    <string name="lab_balance">Balance:</string>
    <string name="lab_cur_cny">CNY</string>
    <string name="lab_cur_hkd">HKD</string>
    <string name="lab_op_time">Time(s)</string>
    <string name="lab_user_id">Card SN:</string>
    <string name="lab_bktg_sn">Book ID:</string>
    <string name="lab_bkcat">Category:</string>
    <string name="name_bkcat_soc">Natural sciences</string>
    <string name="name_bkcat_sci">Social sciences</string>
    <string name="name_bkcat_ltr">Literature</string>
    <string name="name_octopuscard">Octopus Card (Hong Kong)</string>
    <string name="name_szt">Shenzhen Tong</string>
    <string name="name_szt_f">Shenzhen Tong (Old version)</string>
    <string name="name_lnt">Yangcheng Tong</string>
    <string name="name_wht">Wuhan City Smart Card</string>
    <string name="name_cac">Changan Card</string>
    <string name="name_bj">Beijing Municipal Card</string>
    <string name="name_bj_m">Beijing Municipal Card (Old version)</string>
    <string name="name_unknowntag">Unknown Tag</string>
    <string name="name_szlib_center">Shenzhen Library (Center)</string>
    <string name="name_szlib_nanshan">Shenzhen Library (Nanshan)</string>
    <string name="name_lib_readercard">Reader\'s Card</string>
    <string name="name_lib_booktag">Book\'s eTag</string>
    <string name="info_help">
<![CDATA[
	<div>Make sure that the NFC sensor is enaled before read card. You can click \'setting\' button to open system configure dialog to confirm.</div>
	<div>When reading card, please take your card close to NFC sensor of phone (normally, it is at back cover of the phone) and hold a few seconds so that program can read data out.</div><p />
	<div>phone\'s NFC hardware and os performance is not as good as expect currently, so it may need repeatedly read for whese kind of cards. (In case of always fail, You can try to disable NFC sensor and then re-enable it.)</div><p />
	<div>So far we\'ve confirmed the following can be read: ShenzhenTong Card (newer version) of Shenzhen, Octopus Card of Hongkong, Reader Card of Shenzhen Library, Beijing Municipal Card (newer version), Changan Card of Shaanxi,Xi\'an, Wuhan City Smart Card. This is an open source application, welcome everyone participation in development,extends it to read more types of card, Also welcome provide test cards.</div>
	]]>
    </string>
    <string name="info_about">
<![CDATA[
	<div><img src="icon_main,16,16" /><big>&nbsp;NFCard&nbsp;</big><version>v</version></div><p />
	<div>NFCard can read contactless IC card use NFC sensor.</div>
	<div>Supporte a range of iso7816-3 / iso15693 / felicia compliant e-wallet / RFID cards, and can be extended to support many specific data protocol, e.g. pboc2.0 of china.</div>
	<div>NFCard can read information like balance of account, transaction log, etc. from these cards </div><p />
	<div>This is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version. see <a href="http://www.gnu.org/licenses/">www.gnu.org/licenses</a>.</div><p />
	<div>Newest version and source code can be found at <a href="http://code.google.com/p/nfcard/">code.google.com/p/nfcard</a></div><p /><p />
	<div>By <a href="mailto:sinpowei@gmail.com">sinpo</a>, 2011.</div>
	]]>
    </string>
    <string name="tv_litter_cost_tip">Cost:</string>
    <string name="tv_litter_earning_tip">Earning:</string>
    <string name="tv_litter_money_tip">RMB</string>
    <string name="tv_litter_type_tip">Unknow</string>
    <string name="litter_union_type">Mixed</string>
    <string name="litter_recyclable_type">Recyclable</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="litter_is_empty">No data</string>
    <string name="userid_query_hint">Please input user ID</string>
    <string name="btn_litter_data_fetch_str">Search</string>
    <string name="btn_litter_data_fetch_clean_str">Reset</string>
    <string name="report_userID_title_str">ID</string>
    <string name="report_userName_title_str">Name</string>
    <string name="report_littertypeID_title_str">Litter Type</string>
    <string name="report_weight_title_str">Weight</string>
    <string name="report_litterdate_title_str">Date</string>
    <string name="littertprice_title_str">价格</string>
    <string name="litterdata_upload_btn_str">Select</string>
    <string name="litterdata_upload_title">Upload</string>
    <string name="ld_upload_path_title_str">Data file:</string>
    <string name="litterdatafilename">Please select file named:litterdata.txt</string>
    <string name="litterdatafile_not_exsit">Data source file is not loaded,please select</string>
    <string name="litterdatafile_empty">Data source file is empty!\n\nPlease select file named:litterdata.txt</string>
    <string name="tv_user_name_test">Tester</string>
    <string name="litter_data_filter_items_title_str">筛选:</string>
    <string name="litter_data_filter_by_date_str">日期</string>
    <string name="litter_data_filter_by_quarter_str">季度</string>
    <string name="litter_data_filter_by_type_str">类型</string>
    <string name="citys_management_str">地域管理</string>
    <string name="users_management_str">用户管理</string>
    <string name="types_management_str">类型管理</string>
    <string name="about_us_str">关于我们</string>
    <string name="citys_status_str">分类状态：</string>
    <string name="citys_parent_name_zh_tip">所属区域：</string>
    <string name="citys_add_tip">新增</string>
    <string name="citys_add_title_tip">区域名称：</string>
    <string name="citys_status_tip">开启</string>
    <string name="user_add_bt_str">添加</string>
    <string name="user_modify_bt_str">修改</string>
    <string name="user_delete_bt_str">删除</string>
    <string name="ld_loadfile_btn_str">选择</string>
    <string name="ld_upload_btn_str">上传</string>
    <string name="join_title_tip">开卡</string>
    <string name="export_report_title_tip">统计</string>

    <string-array name="usertype_item">
        <item>超级管理员</item>
        <item>管理员</item>
        <item>普通用户</item>
    </string-array>
    <integer-array name="usertype_item_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </integer-array>
    <string name="title_activity_join_cr">JoinCRActivity</string>
</resources>