<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/userID_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/report_userID_title_str"
        android:textColor="@color/black"
        android:textSize="@dimen/text_litter_items" />

    <TextView
        android:id="@+id/littertypeID_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/report_littertypeID_title_str"
        android:textColor="@color/black"
        android:textSize="@dimen/text_litter_items" />

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/report_weight_title_str"
        android:textColor="@color/black"
        android:textSize="@dimen/text_litter_items" />

    <TextView
        android:id="@+id/littertprice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/littertprice_title_str"
        android:textColor="@color/black"
        android:textSize="@dimen/text_litter_items" />

    <TextView
        android:id="@+id/litterdate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/report_litterdate_title_str"
        android:textColor="@color/black"
        android:textSize="@dimen/text_litter_items" />

</LinearLayout>