<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/litter_data_list_lyt_border"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userid_fetch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/userid_query_hint"
                android:inputType="number"
                android:layout_margin="5dp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/litter_data_filter_action_llt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/litter_data_filter_items_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:text="@string/litter_data_filter_items_title_str" />

                <TextView
                    android:id="@+id/litter_data_filter_by_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/litter_data_filter_by_date_str" />

                <TextView
                    android:id="@+id/litter_data_filter_by_quarter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/litter_data_filter_by_quarter_str" />

                <TextView
                    android:id="@+id/litter_data_filter_by_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/litter_data_filter_by_type_str" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/litter_data_action_llt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/litter_data_fetch_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/btn_litter_data_fetch_clean_str" />

            <TextView
                android:id="@+id/litter_data_fetch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/btn_litter_data_fetch_str" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>