<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:id="@+id/status_content_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tv_user_detect_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/tv_user_detect_tip"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_user_detect_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/detected_userid_init"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_blth_connect_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/connect_state_init"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weight_content_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_content_lyt"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rlt_litter_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/weight_background_union"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_litter_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/litter_union_type"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_weight_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/tv_weight_init_tip"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_litter_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bt_connect_background"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/tv_litter_cost_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_litter_earning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bt_connect_background"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/tv_litter_earning_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_upload_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@drawable/upload_weight_background"
        android:enabled="false"
        android:text="@string/btn_upload_weight_str"
        android:textColor="@color/black"
        android:textSize="24sp" />

</RelativeLayout>